--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<div *ngIf = 'appStatus'>{{appTitle}} Tutorialspoint </div>
+<div *ngIf= 'appStatus'>{{appTitle}} Tutorialspoint </div>
+
+<div *ngFor= "let test of appList">
+  <ul>
+    <li>{{test.ID}}</li>
+    <li>{{test.Name}}</li>
+  </ul>
+</div>
